--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,22 @@
+@techreport{APHENA,
+  author       = {Katsouyanni, Klea and Samet, Jonathan M. and Anderson, H. Ross and Atkinson, Richard and Le Tertre, Alain and Medina, Sylvia and Samoli, Evangelia and Touloumi, Giota and Burnett, Richard T. and Krewski, Daniel and Ramsay, Tim and Dominici, Francesca and Peng, Roger D. and Schwartz, Joel and Zanobetti, Antonella},
+  title        = {Air Pollution and Health: {A} European and North American Approach (APHENA)},
+  institution  = {Health Effects Institute},
+  type         = {Research Report},
+  number       = {142},
+  year         = {2009},
+  address      = {Boston, MA},
+}
+
+@Article{text,
+  title = {The text-package: An R-package for Analyzing and Visualizing Human Language Using Natural Language Processing and Deep Learning},
+  author = {Oscar Kjell and Salvatore Giorgi and H. Andrew Schwartz},
+  journal = {Psychological Methods},
+  doi = {10.1037/met0000542},
+  year = {2023},
+  url = {https://pubmed.ncbi.nlm.nih.gov/37126041/},
+}
+
 @Manual{dplyr,
    title = {dplyr: A Grammar of Data Manipulation},
    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
@@ -867,4 +886,65 @@ PMID: 17989204},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2843667/},
 	note = {PMID: 20152037
 PMCID: PMC2843667}
+}
+
+@article{samet2000,
+	title = {Fine Particulate Air Pollution and Mortality in 20 U.S. Cities, 1987{\textendash}1994},
+	author = {Samet, Jonathan M. and Dominici, Francesca and Curriero, Frank C. and Coursac, Ivan and Zeger, Scott L.},
+	year = {2000},
+	month = {12},
+	date = {2000-12-14},
+	journal = {New England Journal of Medicine},
+	pages = {1742--1749},
+	volume = {343},
+	number = {24},
+	doi = {10.1056/NEJM200012143432401},
+	url = {https://www.nejm.org/doi/full/10.1056/NEJM200012143432401},
+	note = {Publisher: Massachusetts Medical Society
+{\_}eprint: https://www.nejm.org/doi/pdf/10.1056/NEJM200012143432401}
+}
+
+@article{katsouyanni1996,
+	title = {Short term effects of air pollution on health: a European approach using epidemiologic time series data: the APHEA protocol.},
+	author = {Katsouyanni, K and Schwartz, J and Spix, C and Touloumi, G and Zmirou, D and Zanobetti, A and Wojtyniak, B and Vonk, J M and Tobias, A and {Pönkä}, A and Medina, S and {Bachárová}, L and Anderson, H R},
+	year = {1996},
+	month = {04},
+	date = {1996-04},
+	journal = {Journal of Epidemiology and Community Health},
+	pages = {S12--S18},
+	volume = {50},
+	number = {Suppl 1},
+	doi = {10.1136/jech.50.suppl_1.s12},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1060882/},
+	note = {PMID: 8758218
+PMCID: PMC1060882}
+}
+
+@article{peng2006,
+	title = {Model Choice in Time Series Studies of Air Pollution and Mortality},
+	author = {Peng, Roger D. and Dominici, Francesca and Louis, Thomas A.},
+	year = {2006},
+	month = {03},
+	date = {2006-03-01},
+	journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
+	pages = {179--203},
+	volume = {169},
+	number = {2},
+	doi = {10.1111/j.1467-985X.2006.00410.x},
+	url = {https://doi.org/10.1111/j.1467-985X.2006.00410.x}
+}
+
+@article{touloumi2006,
+	title = {Seasonal confounding in air pollution and health time-series studies: effect on air pollution effect estimates},
+	author = {Touloumi, G. and Samoli, E. and Pipikou, M. and Le Tertre, A. and Atkinson, R. and Katsouyanni, K.},
+	year = {2006},
+	date = {2006},
+	journal = {Statistics in Medicine},
+	pages = {4164--4178},
+	volume = {25},
+	number = {24},
+	doi = {10.1002/sim.2681},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.2681},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.2681},
+	langid = {en}
 }
